--- a/style.css
+++ b/style.css
@@ -11,9 +11,12 @@
     justify-content: center;
     padding: 30px;
     margin: 100px;
+    margin-top: 70px;
     background-color: rgb(0, 0, 0);
     text-align: center;
     width: 500px;
+    border: 2px solid rgb(47, 249, 2);
+    border-radius: 15px;
 }
 
 .selection {
@@ -22,6 +25,7 @@
     justify-content: center;
     gap: 70px;
     margin-top: 70px;
+    margin-bottom: 70px;
 
 }
 
@@ -34,15 +38,58 @@ button {
 }
 
 button#R {
-    background-image: url(images/Pugno.png);
-
+    background-image: url(images/rock.jpg);
+    background-size: cover;
 }
+
+button#P {
+    background-image: url(images/paper.jpg);
+    background-size: cover;
+}
+
+button#S {
+    background-image: url(images/scissors.jpg);
+    background-size: cover;
+}
+
 body {
     display: flex;
     align-content: center;
     justify-content: center;
 }
 .hover {
-    color: red;
-    box-shadow:  5px 5px rgba(255, 255, 255, 0.27);
+    border: 3px solid rgb(47, 249, 2);
+}
+
+.scores {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 500px;
+    background-color: rgb(0, 0, 0);
+}
+
+#again {
+    color: black;
+    background-color: rgb(47, 249, 2);
+    border: 2px solid white;
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    font-weight: bolder;
+    margin: 30px;
+    margin-bottom: 0px;
+}
+
+.results {
+    margin: 30px;
+}
+
+#roundResult {
+    margin: 5px;
+}
+
+#gameResult {
+    font-weight: bolder;
+    font-size: 30px;
 }
