--- a/style.css
+++ b/style.css
@@ -8,14 +8,15 @@
     display:flex;
     flex-direction: column;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 30px;
     margin: 100px;
     margin-top: 70px;
     background-color: rgb(0, 0, 0);
     text-align: center;
     width: 500px;
-    border: 2px solid rgb(47, 249, 2);
+    height: 500px;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 15px;
 }
 
@@ -69,7 +70,7 @@ body {
     background-color: rgb(0, 0, 0);
 }
 
-#again {
+.again, .go {
     color: black;
     background-color: rgb(47, 249, 2);
     border: 2px solid white;
@@ -92,4 +93,28 @@ body {
 #gameResult {
     font-weight: bolder;
     font-size: 30px;
+}
+
+.go {
+    color: white;
+    background-color: rgb(75, 2, 103);
+    width: 130px;
+}
+
+.change  {
+    background-color: rgb(48, 3, 66);
+    color: rgb(47, 249, 2);
+}
+
+.onAgain {
+    color: rgb(47, 249, 2);
+    background-color: rgb(48, 3, 66);
+}
+
+.loser {
+    border: 2px solid red;
+}
+
+.winner {
+    border: 2px solid rgb(47, 249, 2);
 }
